# app/controllers/authentication_controller.rb
@@ -1,15 +1,0 @@
-# frozen_string_literal: true
-
-class AuthenticationController < ApplicationController
-  skip_before_action :authenticate_request
-
-  def authenticate
-    command = AuthenticateUser.call(params[:email], params[:password])
-
-    if command.success?
-      render json: { auth_token: command.result }
-    else
-      render json: { error: command.errors }, status: :unauthorized
-    end
-  end
-end
